# Base_Conocimiento_SE

./: README.md  app.py  base_conocimiento.json  pyproject.toml  render.yaml  requirements.txt  rules.py
sistema_experto/: app.py  rules.py
