[project]
name = "sistema-experto"
version = "0.1.0"
description = "Base de conocimiento"
authors = [
    {name = "Camilo Gomez",email = "camigomezbernal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "experta (==1.9.4)",
    "frozendict (==1.2)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

